reseting password aand changing password should work

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=root
 POSTGRES_DB=messages-exercise
 DATABASE_URL="postgresql://postgres:root@localhost:5437/postgres?schema=public&sslmode=prefer"
 SECRET=sekretnrhasloo
+
+SENDGRID_API_KEY=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
