--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "bcrypt": "^5.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
