working on app added a lot of things

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ POSTGRES_DB=messages-exercise
 DATABASE_URL="postgresql://postgres:root@localhost:5437/postgres?schema=public&sslmode=prefer"
 SECRET=sekretnrhasloo
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
