--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
     "typescript": "5.1.6",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.2"
   }
 }
