--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/HomePageTemplate"
+    "src/components/HomePageTemplate",
+    "src/components/InvitationPageTemplate",
+    "src/components/ChatTile"
   ],
   "exclude": ["node_modules"]
 }
